<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ben.cole.howmuch.EditTransactionActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEntry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/name_hint_text"
        android:layout_toLeftOf="@+id/categoryText"
        android:layout_toStartOf="@+id/categoryText" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionEntry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/description_hint_text"
        android:layout_below="@+id/nameEntry"
        android:minLines="5"
        android:gravity="top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/type_label_text"
        android:id="@+id/textView"
        android:layout_below="@+id/amountEntry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_income_text"
            android:id="@+id/incomeRadio"
            android:shadowColor="@color/colorPrimary"
            android:onClick="onIncomeClicked" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_text"
            android:id="@+id/expenseRadio"
            android:shadowColor="@color/colorPrimary"
            android:onClick="onExpenseClicked" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/date_label_text"
        android:id="@+id/dateLabel"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="66dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateLabel"
        android:id="@+id/dateBox"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:hint="@string/date_hint_text"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/amountEntry"
        android:layout_below="@+id/descriptionEntry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/amount_hint_text" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/categoryText"
        android:layout_alignTop="@+id/nameEntry"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/category_hint"
        android:onClick="onCategorySelectorClicked"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_above="@+id/descriptionEntry"
        android:gravity="center_vertical|center_horizontal" />

</RelativeLayout>
