<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingTop="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="8dp">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categoryNameEntry"
        android:hint="@string/category_name_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/colourNameEntry"
        android:layout_below="@+id/categoryNameEntry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/category_colour_hint"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colourNameEntry"
        android:layout_alignLeft="@+id/colourNameEntry"
        android:layout_alignStart="@+id/colourNameEntry"
        android:gravity="right"
        android:layout_marginTop="24dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel_text"
            android:id="@+id/buttonCancel"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save_text"
            android:id="@+id/buttonSave"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</RelativeLayout>